--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,209 @@
-<!DOCTYPE html> 
-<html>
+<!DOCTYPE html>
+<html ng-app="myApp">
   <head>
-    <meta http-equiv="refresh" content="1; url='https://www.w3docs.com'" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+    <title>jeff.hedfors.net</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="/css/style.css" rel="stylesheet" media="screen" title="no title" charset="utf-8">
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="/js/materialize.js"></script>
+    <script src="/js/init.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.1.9/angular-materialize.min.js"></script>
+    <script src="/config/routes.js"></script>
+    <script src="/controllers/mainController.js"></script>
   </head>
   <body>
-    <p>You will be redirected to w3docs.com soon!</p>
+    <div class="ng-controller" ng-controller="mainController">
+      <div id="index-banner" class="intro parallax-container">
+        <div id="profile_top"class="no-pad-bot">
+          <div class="row">
+            <div class="col s12">
+              <div class="myPanel card-panel container white z-depth-5">
+                <div class="row valign-wrapper">
+                  <div class="col s12 hide-on-med-and-up">
+                    <img src="/images/profile.jpg" alt="" class="responsive-img">
+                  </div>
+
+              </div>
+                <div class="row valign-wrapper">
+                  <div class="col l6 m10 hide-on-small-only">
+                    <img src="/images/profile.jpg" alt="" class="responsive-img">
+                  </div>
+                  <div class="col s12">
+                    <span class="black-text">
+                      <h3>Jeff Hedfors</h3>
+                      <h5>Looking for new opportunity</h5>
+                      <a href="#project1"><img src="/images/projects.jpg" alt="" /></a>
+                      <a href="https://github.com/jhedfors" target="_blank"><img class="github" src="/images/github.jpg" alt="" /></a>
+                      <a href="https://www.linkedin.com/in/jeff-hedfors" target="_blank"><img src="/images/linkedIn.png" alt="" /></a>
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="parallax"><img src="/images/background.jpg" alt="Unsplashed background img 1"></div>
+      </div>
+      <div class="projectHeader z-depth-5">
+        <div class="section container">
+          <div class="row">
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <h3 class="center">Projects</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+        <div class="parallax-container valign-wrapper">
+          <div id='project1' class="section no-pad-bot">
+          </div>
+
+          <div class="parallax"><img src="/images/drAppointments.jpg" alt="Unsplashed background img 2"></div>
+        </div>
+        <div id="project1_description" class="project1_description z-depth-5">
+
+          <div class="divider"></div>
+          <div class="section container">
+            <div class="row">
+              <div class="col s12">
+                <!-- Modal Structure -->
+                <div id="drAppointments" class="modal modal-fixed-footer">
+                  <div class="modal-content">
+                    <iframe src="http://35.161.76.94/" width=100% height=100%></iframe>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
+                    <a href="http://35.161.76.94/" target="_blank" class="modal-action modal-close waves-effect waves-green btn-flat ">open externally</a>
+                    <a href="https://github.com/jhedfors/Project3_F" target="_blank" class="modal-action modal-close waves-effect waves-green btn-flat ">Github</a>
+                  </div>
+                </div>
+                <p>
+                  <b>Name:</b>  Doctor Appointments 
+                </p>
+                <!-- a class="modal-trigger btn lime darken-4" href="#drAppointments" target="_blank">Open</a -->
+                <a class="btn black" href="#project2">next project...</a>
+                <p>
+                  <b>Purpose:</b>  Schedule doctor appointments.
+                </p>
+                <p>
+                  <b>Technologies used:</b> MongoDB, ExpressJS, AngularJS, NodeJS, jQuery, HTML5, CSS3, MaterializeCSS (framework).
+                </p>
+                <p>
+                  This project earned me a 'Black Belt' at <a href="http://www.codingdojo.com" target="_blank">Coding Dojo</a> for the MEAN stack. To earn a 'Black Belt', you must complete and deploy the project to AWS within 4.5 hrs, while satisfying 95% of the functionality contained within a supplied wireframe. I subsequently added styling, corrected minor bugs.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="parallax-container valign-wrapper">
+          <div id='project2' class="section no-pad-bot">
+            <div class="container">
+            </div>
+          </div>
+          <div class="parallax"><img src="/images/quotableQuotes.jpg" alt="Unsplashed background img 2"></div>
+        </div>
+        <div class="project2_description z-depth-5">
+          <div class="divider"></div>
+          <div class="section container">
+            <div class="row">
+              <div class="col s12">
+                <!-- Modal Structure -->
+                <div id="quotableQuotes" class="modal modal-fixed-footer">
+                  <div class="modal-content">
+                    <iframe src="http://54.211.7.176" width=100% height=100%></iframe>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
+                    <a href="http://54.211.7.176" target="_blank" class="modal-action modal-close waves-effect waves-green btn-flat ">open externally</a>
+                    <a href="https://github.com/jhedfors/Project2_A" target="_blank" class="modal-action modal-close waves-effect waves-green btn-flat ">Github</a>
+                  </div>
+                </div>
+                <p>
+                  <b>Name:</b>  Quotable Quotes
+                </p>
+                <!-- a class="modal-trigger btn red lighten-2" href="#quotableQuotes" target="_blank">Open</a -->
+                <a class="btn black" href="#project3">next project...</a>
+                <p>
+                  <b>Purpose:</b>  Collect favorite quotes.
+                </p>
+                <p>
+                  <b>Technologies used:</b> Python, Flask, mySQL, Javascript, jQuery, HTML5, CSS3, MaterializeCSS (framework).
+                </p>
+                <p>
+                  This project earned me a 'Black Belt'  at <a href="http://www.codingdojo.com" target="_blank">Coding Dojo</a> for the Python stack. To earn a 'Black Belt', you must complete and deploy the project to AWS within 4.5 hrs, while satisfying 95% of the functionality contained within a supplied wireframe. I subsequently added additional functionality to delete your own entry if it has not been favorited by anyone yet, as well as using a modal to create the new entry.
+                </p>
+                <p>
+                  You may register yourself, or use the guest credentials of:
+                  <ul>
+                    <li><b>Email:</b> guest@user.com</li>
+                    <li><b>Password:</b> Guestuser1</li>
+                  </ul>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="parallax-container valign-wrapper">
+          <div id='project3'  class="section no-pad-bot">
+            <div class="container">
+            </div>
+          </div>
+          <div class="parallax"><img src="/images/appointments.jpg" alt="Unsplashed background img 2"></div>
+        </div>
+        <div class="project3_description z-depth-5">
+          <div class="divider"></div>
+          <div class="section container">
+            <div class="row">
+              <div class="col s12 ">
+                <!-- Modal Structure -->
+                <div id="appointments" class="modal modal-fixed-footer">
+                  <div class="modal-content">
+                    <iframe src="http://52.42.254.115/" width=100% height=100%></iframe>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
+                    <a href="http://52.42.254.115/" target="_blank" class="modal-action modal-close waves-effect waves-green btn-flat ">open externally</a>
+                    <a href="https://github.com/jhedfors/Project1_F" target="_blank" class="modal-action modal-close waves-effect waves-green btn-flat ">Github</a>
+                    </ul>
+                  </div>
+                </div>
+                <p>
+                  <b>Name:</b>  Appointments
+                </p>
+                <!-- a class="modal-trigger btn teal darken-2" href="#appointments" target="_blank">Open</a -->
+                <a class="btn black" href="#profile_top">top...</a>
+                <p>
+                  <b>Purpose:</b> Personal appoinment scheduler.
+                </p></b>
+                <p>
+                  <b>Technologies used:</b> PHP, CodeIgniter, mySQL, Javascript, jQuery, HTML5, CSS3, MaterializeCSS (framework).
+                </p>
+                <p>
+                  This project earned me a 'Red Belt' at <a href="http://www.codingdojo.com" target="_blank">Coding Dojo</a> for the LAMP stack. To earn a 'Red Belt', you must complete and deploy the project to AWS within 4.5 hrs, while satisfying 80% of the functionality contained within a supplied wireframe (my 91.2% score was just shy of 95% which is the threshold for a 'Black Belt'). I subsequently added additional functionality to quickly mark an appointment as 'done', as well as using a modal to create the new appointment.
+                </p>
+                <p>
+                  You may register yourself, or use the guest credentials of:
+                  <ul>
+                    <li><b>Email:</b> guest@user.com</li>
+                    <li><b>Password:</b> guestuser</li>
+                  </ul>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="parallax-container valign-wrapper">
+          <div class="section no-pad-bot">
+          </div>
+          <div class="parallax"><img src="/images/background.jpg" alt="Unsplashed background img 3"></div>
+        </div>
+    </div>
   </body>
 </html>
