--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="7; url='https://www.w3docs.com'" />
   </head>
   <body>
-    <p>You will be redirected to w3docs.com soon!</p>
+    <p>Nothing to see here!</p>
   </body>
 </html>
