--- a/jeff/index.html
+++ b/jeff/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="7; url='https://www.linkedin.com/in/jeff-hedfors/'" />
+    <meta http-equiv="refresh" content="1; url='https://www.linkedin.com/in/jeff-hedfors/'" />
   </head>
   <body>
-    <p>You will be redirected to w3docs.com soon!</p>
+    <p>You will be redirected to Jeff's LinkedIn soon!</p>
   </body>
 </html>
