--- a/project/index.html
+++ b/project/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://www.hedfors.net/project/'" />
+  </head>
+  <body>
+    <p>redirecting....</p>
+  </body>
+</html>
