--- a/project/index.html
+++ b/project/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="1; url='https://www.hedfors.net/project/'" />
+    <meta http-equiv="refresh" content="0; url='https://project.hedfors.net/'" />
   </head>
   <body>
     <p>redirecting....</p>
